--- a/assets/stylesheets/index.scss
+++ b/assets/stylesheets/index.scss
@@ -34,6 +34,7 @@ body {
   @import "footer";
   @import "command-line";
   @import "styles";
+  @import "toastr";
 
   .code {
     font-family: "Courier New", Courier, monospace;
