fixes to dashboard

--- a/assets/scripts/modules/dashboard/views/deposits-due.jade
+++ b/assets/scripts/modules/dashboard/views/deposits-due.jade
@@ -1,10 +1,10 @@
 td
   = modelIndex + 1
 td
-  = customerName
+  = customer.firstName + ' ' + customer.lastName
 td
-  = driverLicense||'none'
+  = customer.driverLicense
 td
-  = dipositTaken
+  = payment.amount
 td
-  = date||'none'
+  = moment(this.takenOn).format("D MMMM YYYY")
