--- a/assets/scripts/modules/rent-agreement/views/rent-agreement-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/rent-agreement-template.jade
@@ -22,180 +22,11 @@
                   |  Existing Customer
           .inputs.col-md-3.left
             .portlet-input.input-inline.input-small
-              select.form-control.input-circle.width-150(type='text', name='customer_search', placeholder='search...')
+              select.form-control.width-150(type='text', name='customer_search', placeholder='search...')
           .tools.col-md-1.right
             a.expand(href='javascript:;', data-original-title='', title='')
       .portlet-body.display-hide
-        form#customer-form
-          .row
-            .form-group.col-md-3.col-sm-6.col-xs-12
-              label.col-md-12.control-label
-                | First Name
-                span.required(aria-required='true') *
-              .col-md-12
-                .input-group
-                  span.input-group-addon
-                    i.fa.fa-user
-                  .input-icon.right
-                    i.fa.fa-info-circle.tooltips(data-original-title='First Name', data-container='body')
-                    input.form-control(type='text' name='first_name')
-
-            .form-group.col-md-3.col-sm-6.col-xs-12
-              label.col-md-12.control-label  Middle Name
-              .col-md-12
-                .input-icon.right
-                  i.fa.fa-info-circle.tooltips(data-original-title='Middle Name', data-container='body')
-                  input.form-control(type='text' name='middle_name')
-
-            .form-group.col-md-3.col-sm-6.col-xs-12
-              label.col-md-12.control-label
-                | Last Name
-                span.required(aria-required='true') *
-              .col-md-12
-                .input-icon.right
-                  i.fa.fa-info-circle.tooltips(data-original-title='Last Name', data-container='body')
-                  input.form-control(type='text' name='last_name')
-            .form-group.col-md-3.col-sm-6.col-xs-12
-              label.col-md-12.control-label
-                | DOB
-                span.required(aria-required='true') *
-              .col-md-12
-                .input-icon.right
-                  i.fa.fa-info-circle.tooltips(data-original-title='Date of Birth', data-container='body')
-                  input.form-control(type='text' name='date_of_birth')
-          .row
-            .form-group.col-md-3.col-sm-6.col-xs-12
-              label.col-md-12.control-label
-                | License Number
-                span.required(aria-required='true') *
-              .col-md-12
-                .input-group
-                  span.input-group-addon
-                    i.fa.fa-list-alt
-                  .input-icon.right
-                    i.fa.fa-info-circle.tooltips(data-original-title='Driving License', data-container='body')
-                    input.form-control(type='text' name='license_number')
-
-            .form-group.col-md-3.col-sm-6.col-xs-12
-              label.col-md-12.control-label
-                | License State
-                span.required(aria-required='true') *
-              .col-md-12
-                .input-icon.right
-                  i.fa.fa-info-circle.tooltips(data-original-title='Driving License State', data-container='body')
-                  input.form-control(type='text' name='license_state')
-
-            .form-group.col-md-3.col-sm-6.col-xs-12
-              label.col-md-12.control-label
-                | Expiration Date
-                span.required(aria-required='true') *
-              .col-md-12
-                .input-icon.right
-                  i.fa.fa-info-circle.tooltips(data-original-title='Driving Expiration Date', data-container='body')
-                  input.form-control(type='text' name='license_expiration_date')
-
-            .col-md-12
-              .col-md-12
-                hr
-          .row
-            .form-group.col-md-6.col-sm-6.col-xs-12
-              label.col-md-12.control-label
-                | Address 1
-                span.required(aria-required='true') *
-              .col-md-12
-                .input-icon.right
-                  i.fa.fa-info-circle.tooltips(data-original-title='Address 1', data-container='body')
-                  input.form-control(type='text' name='address_1')
-            .form-group.col-md-6.col-sm-6.col-xs-12
-              label.col-md-12.control-label
-                | Address 2
-              .col-md-12
-                .input-icon.right
-                  i.fa.fa-info-circle.tooltips(data-original-title='Address 2', data-container='body')
-                  input.form-control(type='text' name='address_2')
-          .row
-            .form-group.col-md-3.col-sm-6.col-xs-12
-              label.col-md-12.control-label
-                | City
-                span.required(aria-required='true') *
-              .col-md-12
-                .input-icon.right
-                  i.fa.fa-info-circle.tooltips(data-original-title='City', data-container='body')
-                  input.form-control(type='text' name='city')
-            .form-group.col-md-3.col-sm-6.col-xs-12
-              label.control-label.col-md-12
-                | Country
-                span.required(aria-required='true') *
-              .col-md-12
-                select.form-control(name='country')
-                  option(value='') Select...
-                  option(value='USA') USA
-                  option(value='Canada') Canada
-            .form-group.col-md-3.col-sm-6.col-xs-12
-              label.control-label.col-md-12
-                | State
-                span.required(aria-required='true') *
-              .col-md-12
-                select.form-control(name='state')
-                  option(value='') Select...
-                  option(value='NY') NY
-                  option(value='FL') FL
-            .form-group.col-md-3.col-sm-6.col-xs-12
-              label.col-md-12.control-label
-                | Postal Code
-                span.required(aria-required='true') *
-              .col-md-12
-                .input-group
-                  span.input-group-addon
-                    i.fa.fa-envelope
-                  .input-icon.right
-                    i.fa.fa-info-circle.tooltips(data-original-title='Postal Code', data-container='body')
-                    input.form-control(type='text' name='postal_code')
-          .row
-            .form-group.col-md-3.col-sm-6.col-xs-12
-              label.col-md-12.control-label
-                | Home Phone
-                span.required(aria-required='true') *
-              .col-md-12
-                .input-group
-                  span.input-group-addon
-                    i.fa.fa-phone
-                  .input-icon.right
-                    i.fa.fa-info-circle.tooltips(data-original-title='Home Phone', data-container='body')
-                    input.form-control(type='text' name='home_phone')
-
-            .form-group.col-md-3.col-sm-6.col-xs-12
-              label.col-md-12.control-label
-                | Mobile Phone
-              .col-md-12
-                .input-group
-                  span.input-group-addon
-                    i.fa.fa-mobile
-                  .input-icon.right
-                    i.fa.fa-info-circle.tooltips(data-original-title='Mobile Phone', data-container='body')
-                    input.form-control(type='text' name='mobile_phone')
-
-            .form-group.col-md-3.col-sm-6.col-xs-12
-              label.col-md-12.control-label
-                | Work Phone
-              .col-md-12
-                .input-group
-                  span.input-group-addon
-                    i.fa.fa-phone
-                  .input-icon.right
-                    i.fa.fa-info-circle.tooltips(data-original-title='Work Phone', data-container='body')
-                    input.form-control(type='text' name='work_phone')
-
-            .form-group.col-md-3.col-sm-6.col-xs-12
-              label.col-md-12.control-label
-                | Email
-              .col-md-12
-                .input-group
-                  span.input-group-addon
-                    i.fa.fa-envelope
-                  .input-icon.right
-                    i.fa.fa-info-circle.tooltips(data-original-title='Email', data-container='body')
-                    input.form-control(type='text' name='email')
+        #customer-region
   .col-md-12.col-sm-12.col-xs-12.rent-agreement-portlet
     .portlet.light
       .portlet-title
@@ -207,47 +38,14 @@
         .col-md-4
         .inputs.col-md-3.left
           .portlet-input.input-inline.input-small
-            select.form-control.input-circle.width-150(type='text', name='vehicle_search', placeholder='search...')
+            select.form-control.width-150(type='text', name='vehicle_search', placeholder='search...')
         .tools.col-md-1.right
           a.expand(href='javascript:;', data-original-title='', title='')
       .portlet-body.display-hide
-        form#vehicle-form
-          .row
-            .form-group.col-md-3.col-sm-6.col-xs-12
-              label.col-md-12.control-label
-                | Vehicle Make
-                span.required(aria-required='true') *
-              .col-md-12
-                .input-group
-                  span.input-group-addon
-                    i.fa.fa-user
-                  .input-icon.right
-                    i.fa.fa-info-circle.tooltips(data-original-title='Vehicle Make', data-container='body')
-                    input.form-control(type='text' name='vehicle_make')
-            .form-group.col-md-3.col-sm-6.col-xs-12
-              label.col-md-12.control-label  Color
-              .col-md-12
-                .input-icon.right
-                  i.fa.fa-info-circle.tooltips(data-original-title='Vehicle Color', data-container='body')
-                  input.form-control(type='text' name='vehicle_color')
-            .form-group.col-md-3.col-sm-6.col-xs-12
-              label.col-md-12.control-label
-                | Plate Number
-                span.required(aria-required='true') *
-              .col-md-12
-                .input-icon.right
-                  i.fa.fa-info-circle.tooltips(data-original-title='Vehicle Plate Number', data-container='body')
-                  input.form-control(type='text' name='vehicle_plate_number')
-            .form-group.col-md-3.col-sm-6.col-xs-12
-              label.col-md-12.control-label
-                | Model
-                span.required(aria-required='true') *
-              .col-md-12
-                .input-icon.right
-                  i.fa.fa-info-circle.tooltips(data-original-title='Vhicle Model', data-container='body')
-                  input.form-control(type='text' name='vehicle_model')
+        #vehicle-region
+
   .col-md-12.col-sm-12.col-xs-12.rental-details
-    form#rental-details-form
+    form#rental-details-form.form
       .row
         .form-group.col-md-3.col-sm-6.col-xs-12
           label.col-md-12.control-label
@@ -255,8 +53,73 @@
             span.required(aria-required='true') *
           .col-md-12
             .input-group
-              span.input-group-addon
-                i.fa.fa-user
               .input-icon.right
                 i.fa.fa-info-circle.tooltips(data-original-title='Daily Rate', data-container='body')
-                input.form-control(type='text' name='dayly_rates')
+                input.form-control(type='text' name='daily_rate')
+        .form-group.col-md-3.col-sm-6.col-xs-12
+          label.col-md-12.control-label
+            | Days
+            span.required(aria-required='true') *
+          .col-md-12
+            .input-group
+              .input-icon.right
+                i.fa.fa-info-circle.tooltips(data-original-title='Count of days car is being rented for', data-container='body')
+                input.form-control(type='text' name='days' value='2')
+
+        .form-group.col-md-3.col-sm-6.col-xs-12
+          label.col-md-12.control-label
+            | Type
+            span.required(aria-required='true') *
+          .col-md-12
+            select.form-control(type='text' name='type')
+              option(value="ACCPAY") ACCPAY
+              option(value="ACCREC") ACCREC
+
+        .form-group.col-md-3.col-sm-6.col-xs-12
+          label.col-md-12.control-label
+            | Discount Rate
+            span.required(aria-required='true') *
+          .col-md-12
+            .input-group
+              .input-icon.right
+                i.fa.fa-info-circle.tooltips(data-original-title='Discount Rate', data-container='body')
+                input.form-control(type='text' name='discount_rate' value='2')
+      .row
+        .form-group.col-md-3.col-sm-6.col-xs-12
+          label.col-md-12.control-label
+            | Total Discount
+          .col-md-12
+            .input-group
+              .input-icon.right
+                i.fa.fa-info-circle.tooltips(data-original-title='Total Discount', data-container='body')
+                input.form-control(type='text' name='total_discount')
+        .form-group.col-md-3.col-sm-6.col-xs-12
+          label.col-md-12.control-label
+            | Total Tax
+          .col-md-12
+            .input-group
+              .input-icon.right
+                i.fa.fa-info-circle.tooltips(data-original-title='Total Taxes', data-container='body')
+                input.form-control(type='text' name='days')
+        .form-group.col-md-3.col-sm-6.col-xs-12
+          label.col-md-12.control-label
+            | Subtotal
+            span.required(aria-required='true') *
+          .col-md-12
+            .input-group
+              .input-icon.right
+                i.fa.fa-info-circle.tooltips(data-original-title='Subtotal', data-container='body')
+                input.form-control(type='text' name='subtotal')
+        .form-group.col-md-3.col-sm-6.col-xs-12
+          label.col-md-12.control-label
+            | Total
+            span.required(aria-required='true') *
+          .col-md-12
+            .input-group
+              .input-icon.right
+                i.fa.fa-info-circle.tooltips(data-original-title='Total', data-container='body')
+                input.form-control(type='text' name='total')
+      .form-actions
+        .row
+          .col-md-offset-3.col-md-9.right
+            button.btn.green(type='submit') Submit
