refactored org/customer/deposits data fetch, deposit view in proggress

--- a/assets/scripts/modules/rent-agreement/views/addresses-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/addresses-template.jade
@@ -1,5 +1,5 @@
 .addresses-toolbar.col-md-12
   h4.addresses-list-title Addresses
-  button.list-add.add-phone.right
+  button.list-add.add-address.right
     i.fa.fa-plus
 #addresses-list
