--- a/assets/scripts/modules/rent-agreement/views/customer-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/customer-template.jade
@@ -76,7 +76,8 @@ form#customer-form
     #phones-region
   .col-md-6.col-xs-12.col-sm-12
     #addresses-region
-.row
+
+.row.usercreate-controlls
   .form-actions
     .col-md-12.right
       .col-md-12
