--- a/assets/scripts/modules/rent-agreement/views/deposit-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/deposit-template.jade
@@ -8,4 +8,4 @@ form#deposit-form
         .input-group
           .input-icon.right
             i.fa.fa-info-circle.tooltips(data-original-title='Customer that made deposit', data-container='body')
-            select.form-control.width-150(type='text', name='deposit_search', placeholder='search...')
+            select.form-control.width-150(type='text', name='deposit_customer', placeholder='search...')
