--- a/assets/scripts/modules/rent-agreement/views/rent-agreement-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/rent-agreement-template.jade
@@ -29,7 +29,7 @@
             a.expand(href='javascript:;', data-original-title='', title='')
       .portlet-body.display-hide
         #customer-region
-  .col-md-12.col-sm-12.col-xs-12.rent-agreement-portlet.hidden
+  .col-md-12.col-sm-12.col-xs-12.rent-agreement-portlet.vehicle-portlet.hidden
     .portlet.light
       .portlet-title
         .col-md-4.caption
@@ -45,11 +45,11 @@
           a.expand(href='javascript:;', data-original-title='', title='')
       .portlet-body.display-hide
         #vehicle-region
-  .col-md-12.col-sm-12.col-xs-12.rent-agreement-portlet.hidden
+  .col-md-12.col-sm-12.col-xs-12.rent-agreement-portlet.deposit-portlet.hidden
     .portlet.light
       .portlet-title
         .col-md-4.caption
-          i.fa.fa-user.font-purple-plum
+          i.fa.fa-usd.font-purple-plum
           span.caption-subject.bold.font-purple-plum.uppercase
             | Deposit
           span.caption-helper (id)
@@ -73,7 +73,7 @@
           a.expand(href='javascript:;', data-original-title='', title='')
       .portlet-body.display-hide
         #deposit-region
-  .col-md-12.col-sm-12.col-xs-12.rental-details.hidden
+  .col-md-12.col-sm-12.col-xs-12.rental-details.agreement-details-portlet.hidden
     form#rental-details-form.form
       .row
         .form-group.col-md-3.col-sm-6.col-xs-12
