--- a/assets/scripts/modules/rent-agreement/views/address-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/address-template.jade
@@ -4,9 +4,10 @@
       | Address Line 1
       span.required(aria-required='true') *
     .col-md-12
-      .input-icon.right
-        i.fa.fa-info-circle.tooltips(data-original-title='Address 1', data-container='body')
+      .input-group
         input.form-control(type='text' name='address_1')
+        span.input-group-addon.remove-address
+          i.fa.fa-times
   .form-group.col-md-12.col-sm-12.col-xs-12
     label.col-md-12.control-label
       | Address Line 2
