fix on dataTables, fix menu part1

--- a/assets/scripts/modules/dashboard/views/widget-template.jade
+++ b/assets/scripts/modules/dashboard/views/widget-template.jade
@@ -6,7 +6,7 @@
     .tools
       a.expand(href='javascript:;', data-original-title='', title='')
   .portlet-body.display-hide
-    .table-scrollable
+    .dataTables_wrapper.no-footer
       table.table.table-bordered.table-hover(id="#{dataTableId}")
         thead
           tr
