--- a/assets/scripts/modules/sidebar-menu/layout-template.jade
+++ b/assets/scripts/modules/sidebar-menu/layout-template.jade
@@ -21,19 +21,28 @@
           span.title Rent Agreement
           span.arrow
         ul.sub-menu
-          li
+          li#rent-agreement
             a(href='#rent-agreement')
               i.icon-bar-chart
-              | 							New Rent Agreement
-          li
-            a(href='index_2.html')
+              | 							Rent Agreement
+          li#rent-agreements
+            a(href='#rent-agreements')
               i.icon-bulb
               | 							Rent Agreements
       li
         a(href='javascript:;')
-          i.fa.fa-users
+          i.fa.fa-star
           span.title Customers
           span.arrow
+        ul.sub-menu
+          li#customer
+            a(href='#customer')
+              i.icon-bar-chart
+              |               Customer
+          li#customers
+            a(href='#customers')
+              i.icon-bulb
+              |               Customers
       li
         a(href='javascript:;')
           i.fa.fa-car
