added menu active status for pages existing pages

--- a/assets/scripts/modules/sidebar-menu/layout-template.jade
+++ b/assets/scripts/modules/sidebar-menu/layout-template.jade
@@ -49,11 +49,11 @@
           span.title Vehicles
           span.arrow
         ul.sub-menu
-          li
+          li#vehicle
             a(href='#vehicle')
               i.icon-bar-chart
-              |              New Vehicle
-          li
+              |              Vehicle
+          li#vehicles
             a(href='#vehicles')
               i.icon-bulb
               |              Vehicles
