--- a/assets/scripts/modules/vehicles/views/vehicles-template.jade
+++ b/assets/scripts/modules/vehicles/views/vehicles-template.jade
@@ -1,1 +1,9 @@
-h2 'Vehicle List'
+.dataTables_wrapper.no-footer
+  table.table.table-bordered.table-hover(id="#{dataTableId}")
+    thead
+      tr
+        - for item in header
+          th
+            span
+              b= item
+    tbody.row-container
