first part customers edit, new, list

--- a/assets/scripts/modules/customers/views/customer-row-template.jade
+++ b/assets/scripts/modules/customers/views/customer-row-template.jade
@@ -7,6 +7,13 @@ td
 td
   = emailAddress ||'none'
 td
+  if contactStatus == 'DELETED'
+    span(class="label label-sm label-danger")
+      = contactStatus
+  else
+    span(class="label label-sm label-success")
+      = contactStatus
+td
   a.btn.default.btn-xs.yellow.edit-row(href="#customer/#{contactID}")
     i.fa.fa-edit Edit
   a.btn.default.btn-xs.red.delete-row(href="javascript:;")
