--- a/assets/scripts/modules/sidebar-menu/layout-template.jade
+++ b/assets/scripts/modules/sidebar-menu/layout-template.jade
@@ -17,7 +17,7 @@
         // END SIDEBAR TOGGLER BUTTON
       li.start
         a(href='javascript:;')
-          i.fa.fa-star
+          i.fa.fa-file-text
           span.title Rent Agreement
           span.arrow
         ul.sub-menu
@@ -31,7 +31,7 @@
               | 							Rent Agreements
       li
         a(href='javascript:;')
-          i.fa.fa-star
+          i.fa.fa-users
           span.title Customers
           span.arrow
         ul.sub-menu
