--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -133,3 +133,7 @@ span.select2-selection__arrow {
 #deposit-payment-region {
   margin-bottom: 15px;
 }
+
+.rent-agreement-row:hover {
+  cursor: pointer;
+}
